--- a/input.scss
+++ b/input.scss
@@ -83,8 +83,7 @@ header {
 
 header {
     .container {
-        @extend %container-style;
-        max-width: 680px;
+        max-width: 550px;
     }
 }
 
@@ -96,16 +95,13 @@ main {
         .features {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: auto auto;
             justify-content: center;
             align-items: center;
             gap: 24px;
 
             .card {
                 @extend %card-style;
-            }
 
-            .card {
                 p {
                     margin: 10px 0 28px 0;
                 }
@@ -143,8 +139,6 @@ main {
             }
 
 
-            
-
         }
     }
 }
@@ -155,3 +149,28 @@ footer {
 }
 
 
+
+
+@media screen and (max-width: 40em) {
+
+    header {
+        h1 {
+            font-size: 1.5em;
+        }
+        h2 {
+            font-size: 1.5em;
+        }
+    }
+
+
+    main {
+        .container {
+            .features {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: normal;
+            }
+        }
+    }
+}
