--- a/output.css
+++ b/output.css
@@ -15,7 +15,7 @@ h2, h1 {
   font-weight: 600;
 }
 
-header .container, .container {
+.container {
   width: 90%;
   max-width: 1100px;
   margin: 0 auto;
@@ -58,13 +58,12 @@ header {
 }
 
 header .container {
-  max-width: 680px;
+  max-width: 550px;
 }
 
 main .container .features {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto auto;
   justify-content: center;
   align-items: center;
   gap: 24px;
@@ -100,6 +99,21 @@ main .container .features .calculator {
 
 footer {
   margin: 2rem 0 12px 0;
+}
+
+@media screen and (max-width: 40em) {
+  header h1 {
+    font-size: 1.5em;
+  }
+  header h2 {
+    font-size: 1.5em;
+  }
+  main .container .features {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: normal;
+  }
 }
 
 /*# sourceMappingURL=output.css.map */
