--- a/input.scss
+++ b/input.scss
@@ -41,7 +41,7 @@ body {
     padding: 24px;
     background: #fff;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+    border-radius: 5px;
     border-top: 4px solid transparent;
 }
 
@@ -151,7 +151,7 @@ footer {
 
 
 
-@media screen and (max-width: 48em) {
+@media screen and (max-width: 48em) {u 
 
     header {
         h1 {
