--- a/output.css
+++ b/output.css
@@ -26,7 +26,7 @@ main .container .features .card {
   padding: 24px;
   background: #fff;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
+  border-radius: 5px;
   border-top: 4px solid transparent;
 }
 
@@ -102,10 +102,10 @@ footer {
 }
 
 @media screen and (max-width: 48em) {
-  header h1 {
+  u header h1 {
     font-size: 1.5em;
   }
-  header h2 {
+  u header h2 {
     font-size: 1.5em;
   }
   main .container .features {
